# file-storage-web-app

./: .gitignore  README.md  pyproject.toml
cli/: __init__.py  api.py  app.py  auth.py  sync.py
server/: __init__.py  __main__.py  api.py  auth.py  config.py  server.py  sessions.py
server/database/: __init__.py  connection.py  options.py
server/database/migrations/: __init__.py  migrations.py  version_1.py  version_2.py
server/database/models/: __init__.py  files.py  folders.py  sessions.py  users.py
tests/: test_api.py  test_cli.py  test_migrations.py  test_models.py
