[tool.poetry]
name = "file-storage-web-app"
version = "0.1.0"
description = ""
authors = ["ZechCodes <hi@zech.codes>"]

[tool.poetry.dependencies]
python = "^3.9"
aiosqlite = "^0.17.0"
fastapi = "^0.75.2"
httpx = "^0.22.0"
typer = "^0.4.1"

[tool.poetry.dev-dependencies]
pytest = "^7.1.2"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
